# advent_of_code_2020

./: Cargo.toml
benches/: problem_12_benchmark.rs  problem_13_benchmark.rs  problem_14_benchmark.rs  problem_16_benchmark.rs  problem_17_benchmark.rs  problem_18_benchmark.rs
resources/: problem_8_input.txt
src/: lib.rs  main.rs
src/passport/: height.rs  mod.rs
src/problems/: mod.rs  problem_1.rs  problem_13.rs  problem_14.rs  problem_15.rs  problem_16.rs  problem_17.rs  problem_18.rs  problem_2.rs  problem_3.rs  problem_4.rs
src/processor/: mod.rs
src/ship/: mod.rs
src/utils/: mod.rs
