[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["maslabgamer <maslabgamer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[dependencies]
regex = "1.4.2"
lexical = "5.2.0"
ring-algorithm = "0.2.2"

[profile.dev]
opt-level = 3

[[bench]]
name = "problem_12_benchmark"
harness = false

[[bench]]
name = "problem_13_benchmark"
harness = false
